# agda2rust

./: .ghci  .gitignore  Agda.Builtin.Bool.html  Agda.Builtin.Float.html  Agda.Builtin.List.html  Agda.Builtin.Maybe.html  Agda.Builtin.Nat.html  Agda.Builtin.Sigma.html  Agda.Primitive.html  AllTests.html  Bool.html  Bool00.html  Cargo.toml  Char.html  ConsImplicitArgs.html  Constants.html  ConstructorImplicitArgs.html  Curry.html  Either.html  ErasedFields.html  EtaExpansion.html  ExactSplit.html  Exp.html  Float.html  Identity.html  Int.html  Levels.html  List.html  List0.html  Makefile  Maybe.html  MultiArgFun.html  Nat.html  Nat0.html  Newtype.html  Numbers.html  OpenModule.html  OverloadedCons.html  OverloadedConstructors.html  OverloadedFields.html  (+24 more)
.github/workflows/: ci.yml
future-tests/: AnonymousModules.agda  Bot.agda  Closures.agda  CompileTimeIrrelevance.agda  Eq.agda  EvalApply.agda  FunLib.agda  IO.agda  IO2.agda  IdType.agda  Keywords.agda  Level.agda  ModuleParams.agda  NonLinearFun.agda  PartialAppSwapId.agda  PolyCon.agda  RustPrintBug.agda  Sigma.agda  SigmaMod.agda  TyParams.agda  UnicodeBug.agda  UserAccounts.agda  Vec.agda  Where.agda  WrapSet.agda
src/: Agda.hs  Agda2Rust.hs  AgdaInternals.hs  AgdaUtils.hs  Main.hs  ParseRust.hs  PrintRust.hs  Rust.hs  RustPrinter.hs  RustUnicode.hs  RustUtils.hs  Utils.hs
src/Agda/: Builtins.hs  Lib.hs  ToTreeless.hs  Utils.hs
src/Agda2Rust/: Convert.hs  Monad.hs  Pragma.hs
src/Agda2Rust/Convert/: Builtins.hs  Class.hs  Constructors.hs  Definitions.hs  FFI.hs  Literals.hs  Names.hs  Terms.hs  Types.hs
src/Rust/: Lib.hs  Utils.hs
test/: AllTests.agda  Bool.agda  Bool0.agda  Bool00.agda  Char.agda  ConsImplicitArgs.agda  Constants.agda  Curry.agda  Either.agda  Eq.agda  Eq0.agda  ErasedFields.agda  EtaExpansion.agda  ExactSplit.agda  Exp.agda  Float.agda  Float0.agda  Identity.agda  Input.rs  Int.agda  Lambdas.agda  Levels.agda  List.agda  List0.agda  Makefile  Maybe.agda  MultiArgFun.agda  Nat.agda  Nat0.agda  Newtype.agda  Numbers.agda  OpenModule.agda  OverloadedCons.agda  OverloadedConstructors.agda  OverloadedFields.agda  PartialApp.agda  PartialAppConst.agda  PartialAppId.agda  PartialAppM.agda  PartialAppSwap.agda  (+25 more)
test/Agda/Builtin/: Bool.rs  List.rs  Nat.rs
test/future/: CompileTimeIrrelevance.agda  Erasure.agda  FFI.agda  FieldVisibility.agda  NonLinearFun.agda  RunTimeIrrelevance.agda  Unicode.agda
test/future/golden/: Vec.rs
test/golden/: AllTests.rs  Bool.rs  Bool00.rs  Char.rs  ConsImplicitArgs.rs  Constants.rs  ConstructorImplicitArgs.rs  Curry.rs  Either.rs  Eq0.rs  ErasedFields.rs  EtaExpansion.rs  ExactSplit.rs  Exp.rs  Float.rs  Identity.rs  Int.rs  Levels.rs  List.rs  List0.rs  Maybe.rs  MultiArgFun.rs  Nat.rs  Nat0.rs  Newtype.rs  Numbers.rs  OpenModule.rs  OverloadedCons.rs  OverloadedConstructors.rs  OverloadedFields.rs  PartialApp.rs  PartialAppId.rs  PartialAppM.rs  PartialAppSwap.rs  PointFree.rs  Postulates.rs  Prim.rs  Product.rs  RecordFields.rs  RunTimeIrrelevance.rs  (+8 more)
test/golden/Agda/: Primitive.rs
test/golden/Agda/Builtin/: Bool.rs  Float.rs  List.rs  Maybe.rs  Nat.rs  Sigma.rs
