cabal-version:       2.2
name:                agda2min
version:             1.1
author:              ???
category:            Language, Compiler
build-type:          Simple
synopsis:            Compiling Agda code to ??.

extra-doc-files:    README.md

source-repository head
  type:     git
  location: https://github.com/omelkonian/agda-minimal-backend.git

executable agda2min
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Paths_agda2min
  autogen-modules:     Paths_agda2min
  build-depends:       base >= 4.10 && < 4.18,
                       Agda >= 2.6.4 && < 2.6.5,
                       deepseq >= 1.4.4 && < 1.6
