cabal-version:       2.2
name:                agda2rust
version:             1.1
author:              Orestis Melkonian
category:            Language, Compiler
build-type:          Simple
synopsis:            Compiling Agda code to Rust.

extra-doc-files:    README.md

source-repository head
  type:     git
  location: https://github.com/omelkonian/agda2rust.git

tested-with:
    GHC == 9.4.8
    GHC == 9.4.3

executable agda2rust
  hs-source-dirs:      src
  main-is:             Main.hs
  autogen-modules:     Paths_agda2rust
  other-modules:       Paths_agda2rust
                       Agda2Rust
                       AgdaInternals
  default-extensions:
    LambdaCase RecordWildCards PatternSynonyms PatternGuards TupleSections
    ViewPatterns
    TypeFamilies TypeOperators TypeApplications FunctionalDependencies
  ghc-options:         -rtsopts
  build-depends:       base >= 4.10 && < 4.18,
                       Agda >= 2.6.4 && < 2.6.5,
                       deepseq >= 1.4.4 && < 1.6,
                       text,
                       language-rust,
                       data-serializer,
                       directory >= 1.2.6.2 && < 1.4,
                       filepath >= 1.4.1.0 && < 1.5,
                       pretty-show,
                       containers==0.6.6,
                       mtl==2.2.2,
                       unicode-data,
                       syb

executable rustp
  hs-source-dirs:      src
  main-is:             RustPrinter.hs
  build-depends:       base >= 4.10 && < 4.18,
                       language-rust,
                       pretty-show

executable reUnicode
  hs-source-dirs:      src
  main-is:             RustUnicode.hs
  build-depends:       base >= 4.10 && < 4.18,

