cabal-version:       2.2
name:                agda2rust
version:             1.1
author:              Orestis Melkonian
category:            Language, Compiler
build-type:          Simple
synopsis:            Compiling Agda code to Rust.

extra-doc-files:    README.md

source-repository head
  type:     git
  location: https://github.com/omelkonian/agda2rust.git

tested-with:
    GHC == 9.4.8
    GHC == 9.4.3

executable agda2rust
  hs-source-dirs:      src
  main-is:             Main.hs
  autogen-modules:     Paths_agda2rust
  other-modules:       Paths_agda2rust
                       Utils
                       Agda.ToTreeless
                       Agda.Lib
                       Agda.Builtins
                       Agda.Utils
                       Agda
                       Rust.Lib
                       Rust.Utils
                       Rust
                       Agda2Rust.Pragma
                       Agda2Rust.Monad
                       Agda2Rust.Convert.Class
                       Agda2Rust.Convert.Names
                       Agda2Rust.Convert.Literals
                       Agda2Rust.Convert.Builtins
                       Agda2Rust.Convert.Terms
                       Agda2Rust.Convert.Types
                       Agda2Rust.Convert.Constructors
                       Agda2Rust.Convert.Definitions
                       Agda2Rust.Convert.FFI
                       Agda2Rust.Convert
                       Agda2Rust
  default-extensions:
    LambdaCase RecordWildCards PatternSynonyms TupleSections
    ViewPatterns PatternGuards
    ScopedTypeVariables
    TypeFamilies TypeOperators TypeApplications
    FunctionalDependencies TypeSynonymInstances
    DoAndIfThenElse BlockArguments MultiWayIf
  ghc-options:         -rtsopts
  build-depends:       base >= 4.10 && < 4.18,
                       Agda >= 2.6.4 && < 2.6.5,
                       deepseq >= 1.4.4 && < 1.6,
                       text,
                       language-rust,
                       data-serializer,
                       directory >= 1.2.6.2 && < 1.4,
                       filepath >= 1.4.1.0 && < 1.5,
                       pretty-show,
                       containers==0.6.6,
                       mtl==2.2.2,
                       unicode-data,
                       syb

executable rustp
  hs-source-dirs:      src
  main-is:             RustPrinter.hs
  other-modules:       Rust.Lib
  build-depends:       base >= 4.10 && < 4.18,
                       language-rust,
                       pretty-show

executable reUnicode
  hs-source-dirs:      src
  main-is:             RustUnicode.hs
  build-depends:       base >= 4.10 && < 4.18,

